<resources>
    <string name="app_name">PMSServeyUser</string>
    <string name="tender_survey">TENDER SURVEY SYSTEM</string>

    <string name="google_maps_key">AIzaSyAkkz_K6d5CBMaY6qOBVSCuybYnP_AkagU</string>

    <!--Login screen name-->

    <string name="login_page_name">PMS System</string>
    <string name="login_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_email">Please enter your username</string>
    <string name="enter_valid_email">Please enter your valid email id</string>
    <string name="enter_password">Please enter your password</string>
    <string name="no_internet">No internet connection</string>
    <string name="copyright">Copyright © 2019 <a href="https://shyamsteel.com/">Shyamsteel</a>. All rights reserved.</string>

    <!--Login screen name-->

    <string name="image_compression_error_text">Image not compressed</string>
    <string name="image_capture_cancel_text">User cancelled image process</string>
    <string name="failed_to_capture_image_text">Sorry! Failed to process image</string>
    <string name="permission_not_given">If you deny permission, you can not use this service. Please turn on permissions in [Setup]-> [Permission]</string>
    <string name="error_occurred">Something went wrong!</string>

    <!-- Permission dialog msg -->
    <string name="write_to_calendar">Write to calendar permission is needed. Please allow in App Settings for additional functionality.</string>
    <string name="read_contacts">Read contact permission is needed. Please allow in App Settings for additional functionality.</string>
    <string name="record_audio">Microphone permission is needed. Please allow in App Settings for additional functionality.</string>
    <string name="access_fine_location">Location permission is needed. Please allow in App Settings for additional functionality.</string>
    <string name="access_coarse_location">Approx location permission is needed. Please allow in App Settings for additional functionality.</string>
    <string name="write_external_storage">Access to external storage permission is needed. Please allow in App Settings for additional functionality.</string>
    <string name="camera">Camera permission is needed. Please allow in App Settings for additional functionality.</string>
    <string name="finger_print">Finger Print Authentication permission is needed. Please allow in App Settings for additional functionality.</string>

    <string name="group_pemission_pre_msg">You need to grant access to </string>
    <string name="cannot_proceed_permission_msg">You cannot proceed further without allowing initially permissions.</string>
    <string name="permission_dialog_button_ok">Ok</string>
    <string name="permission_dialog_button_cancel">Cancel</string>

    <!-- Pemission TAG -->
    <string name="tag_write_to_calendar">Write to Calendar</string>
    <string name="tag_read_contact">Read Contacts</string>
    <string name="tag_record_audio">Audio Record</string>
    <string name="tag_access_fine_location">Fine Location</string>
    <string name="tag_access_coarse_location">Approx Location</string>
    <string name="tag_write_external_storage">Write Information</string>
    <string name="tag_read_external_storage">Read Information</string>
    <string name="tag_camera">camera</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="insufficient_permissions">Insufficient permissions.</string>
    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>

    <!--                                Attendence                            -->

    <string name="justification_button">Justify</string>
    <string name="grace_radio">Grace</string>
    <string name="od_radio">O/D</string>
    <string name="hd_radio">H/D</string>
    <string name="fd_radio">F/D</string>
    <string name="deviation_label">Deviation Time: </string>
    <string name="deviation_remarks">Justification </string>
    <string name="p_and_m">P &amp; M </string>
    <string name="p_and_m_type">P &amp; M Type</string>


    <string name="rationale_location_contacts">This app needs access to your location and contacts to know where and who you are.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>


</resources>
