<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#edf5fe"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50sdp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tv_tender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/_10sdp"
        android:text="@string/tender_survey"
        android:textColor="#000000"
        android:textSize="@dimen/_18sdp" />

    <RelativeLayout
        android:id="@+id/rl_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_below="@+id/tv_tender"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/editext_bg">

        <ImageView
            android:id="@+id/iv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_20sdp"
            android:src="@drawable/email_icon" />

        <EditText
            android:id="@+id/et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_email"
            android:background="@android:color/transparent"
            android:cursorVisible="true"
            android:hint="@string/login_hint"
            android:inputType="text"
            android:paddingLeft="@dimen/_10sdp"
            android:textColor="#000000"
            android:textColorHint="#7A8790"
            android:textSize="@dimen/_15sdp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_below="@+id/rl_login"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/editext_bg">

        <ImageView
            android:id="@+id/iv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_20sdp"
            android:src="@drawable/password_icon" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_password"
            android:background="@android:color/transparent"
            android:cursorVisible="true"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/_10sdp"
            android:textColor="#000000"
            android:textColorHint="#7A8790"
            android:textSize="@dimen/_15sdp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_below="@+id/rl_password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/login_bg"
        android:text="@string/login_button"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="@dimen/_20sdp" />

    <TextView
        android:id="@+id/tv_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password"
        android:textSize="@dimen/_15sdp" />


    <RelativeLayout
        android:id="@+id/rl_footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:background="#263238">

        <TextView
            android:id="@+id/tv_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:layout_centerInParent="true"
            android:textSize="@dimen/_10sdp"
            android:textColor="#7a8791"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#33b5e5"
        android:layout_above="@+id/rl_footer"/>

</RelativeLayout>